# hdb-resale-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_affordability_index.sql  mart_hdb_by_month.sql  mart_price_trends.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_hdb_prices.sql  stg_locations.sql
kestra/flows/: backfill_flow.yml  hdb_pipeline_flow.yml  incremental_flow.yml
src/ingestion/: config.py  hdb_loader.py  location_enricher.py  test_api_key.py
terraform/: main.tf  outputs.tf  variables.tf
